--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <html>
   <body>
+    
+     <h1>I'm a header 1!</h1>
     Hello there, awesome person! 
   </body>
 </html>
     <head>
-        <title>My awesome web page</title>
+     
+       <title>My awesome web page</title>
     </head>
