--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     </head>
 <img src="https://avatars.githubusercontent.com/u/85159175?v=4">
 <ul>
-    <li>github.com</li>
-    <li>distrowatch.com</li>
-    <li>gmail.com</li>
+      <li><a href="https://github.com">This is a link to GitHub!</a></li>
+      <li><a href="https://distrowatch.com">This is a link to Distrowatch!</a></li>
+      <li><a href="https://google.com">This is a link to Google!</a></li>
 </ul>
+
