--- a/index.html
+++ b/index.html
@@ -16,3 +16,7 @@
       <li><a href="https://google.com">This is a link to Google!</a></li>
 </ul>
 
+    <head>
+        <title>I am a title!</title>
+        <link rel="stylesheet" href="style.css">
+    </head>
